# design-patterns

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
Patterns/: CMakeLists.txt
Patterns/Registration/: README.md
Patterns/Registration/Cpp/: CMakeLists.txt  test_RegistrationDemo.cpp
Patterns/Registration/Cpp/TestPackage/: CMakeLists.txt
Patterns/Registration/Cpp/TestPackage/Base/: CMakeLists.txt  ComponentBase.h  ComponentBuilder.cpp  ComponentBuilder.h  ComponentRegistration.cpp  ComponentRegistration.h
Patterns/Registration/Cpp/TestPackage/ComponentFactory/: CMakeLists.txt  ComponentBuilder.cpp  ComponentBuilder.h
Patterns/Registration/Cpp/TestPackage/SubPackage_01/: CMakeLists.txt
Patterns/Registration/Cpp/TestPackage/SubPackage_01/SubPackage_01_01/: CMakeLists.txt  Decoy.cpp  Decoy.h  SubModule_01_01.cpp  SubModule_01_01.h
Patterns/Registration/Cpp/TestPackage/SubPackage_02/: CMakeLists.txt  SubModule_02.cpp  SubModule_02.h
Patterns/Registration/Python/: test_RegistrationDemo.py
Patterns/Registration/Python/TestPackage/Base/: ComponentBase.py  ComponentBuilder.py  ComponentRegistration.py  __init__.py
Patterns/Registration/Python/TestPackage/SubPackage_01/: __init__.py
Patterns/Registration/Python/TestPackage/SubPackage_01/SubModule_01_01/: Decoy_01.py  SubModule_01_01.py
Patterns/Registration/Python/TestPackage/SubPackage_01/SubModule_01_02/: SubModule_01_02.py  SubModule_01_02_extra.py
Patterns/Registration/Python/TestPackage/SubPackage_02/: SubModule_02.py  __init__.py
(+1 files in other folders)
